Bug fix: runtime error, added unit tests(Mockito)